--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -38,6 +38,13 @@
             <artifactId>sakai-assignment2-api</artifactId>
         </dependency>
 
+        <!-- irubric dependencies -->
+        <dependency>
+            <groupId>org.sakaiproject</groupId>
+            <artifactId>sakai-gradebook-irubric-api</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+
         <!-- other project dependencies -->
         <dependency>
             <groupId>org.sakaiproject.kernel</groupId>
