--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
        <artifactId>master</artifactId>
 	   <groupId>org.sakaiproject</groupId>
-       <version>2.10-SNAPSHOT</version>
+       <version>2.9.2</version>
     </parent>
     
     <name>sakai-assignment2 base pom</name>
