--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -71,15 +71,18 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
+  	    <version>3.3.2.GA</version>
         </dependency>
         <!-- needed by hibernate unit tests -->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-ehcache</artifactId>
+	    <version>3.3.2.GA</version>
         </dependency>
         <dependency>
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
+	    <version>3.14.0-GA</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -88,6 +91,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
+	     <version>2.5.6.SEC03</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -96,6 +100,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
+	    <version>2.5.6.SEC03</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
